@@ -1,3 +1,12 @@
+2008-07-30  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* lib/mi-support.exp (get_mi_thread_list)
+	(check_mi_and_console_threads): New, moved from ...
+	* gdb.mi/mi-pthread.exp: ...here.
+	* gdb.mi/gdb669.exp (get_mi_thread_list)
+	(check_mi_and_console_threads): Delete.
+	* gdb.mi/mi2-pthread.exp: Likewise.
+
 2008-07-28  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in (just-check): Remove.  Move body to...
